<resources>
    <string name="app_name">CP-Tester</string>
    <string name="title_activity_details">Details</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="section_title">Content provider information:</string>
    <string name="section_authority">Authority:</string>
    <string name="section_permissions_read">Read permissions:</string>
    <string name="section_permissions_write">Write permissions:</string>
    <string name="section_package">Package:</string>
    <string name="section_process">Process name:</string>
    <string name="section_exported">Exported:</string>
    <string name="section_enabled">Enabled:</string>
    <string name="sql_injection">* from sqlite_master--</string>
    <string name="help_info">Try SQL Injection:</string>

    <string-array name="filters">
        <item>enabled</item>
        <item>with permissions</item>
        <item>all</item>
    </string-array>

    <string-array name="filters_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="test">Test</string>
    <string name="tab_title_1">info</string>
    <string name="tab_title_2">schema</string>
    <string name="tab_title_3">query</string>
    <string name="details_query_button">Inject!</string>
    <string name="content_description">Status</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_test_all">Test All</string>
    <string name="menu_settings">Settings</string>
    <string name="info_message">Schema unavailable</string>
    <string name="permission_denied">Permission wasn\'t granted, so you can\'t play with SMS</string>
    <string name="sql_injection_info">
        SQL injection is a code injection technique, used to attack data-driven applications. \n
        Use "--" for comments. \n
        Remember that you paste this code in query like SELECT "your phrase" FROM table_name WHERE something.
    </string>
</resources>
